--- a/client/index.html
+++ b/client/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Driving Rod Calculation</title>
+    <title>F1200 DocGen</title>
     <link rel="stylesheet" href="static/css/style.css">
 </head>
 <body>
